99_exam/14_sg_wordpress.tf
# resource "aws_security_group" "allow_tls" {
#   name        = "allow_http"
#   description = "Allow TLS inbound traffic"
#   vpc_id      = aws_vpc.wgpark_vpc.id

#   ingress = [
#     {
#       description      = "TLS from VPC"
#       from_port        = 443
#       to_port          = 443
#       protocol         = "tcp"
#       cidr_blocks      = [aws_vpc.main.cidr_block]
#       ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
#     }
#   ]

#   egress = [
#     {
#       from_port        = 0
#       to_port          = 0
#       protocol         = "-1"
#       cidr_blocks      = ["0.0.0.0/0"]
#       ipv6_cidr_blocks = ["::/0"]
#     }
#   ]

#   tags = {
#     Name = "allow_tls"
#   }
# }
